[package]
name = "blockish"
version = "0.0.8"
authors = ["yazgoo <yazgoo@gmail.com>"]
edition = "2018"
license = "MIT"
description = "display images in a terminal with UTF8 blocks"
readme = "README.md"
homepage = "https://github.com/yazgoo/blockish"
repository = "https://github.com/yazgoo/blockish"
keywords = ["cli", "utf8", "terminal", "image"]
categories = ["command-line-utilities"]
exclude = ["images/*"]

[dependencies]
lazy_static = "1.4"
image = "0.22"
clap = { version = "2.33", features = ["yaml"] }
scoped_threadpool = "0.1"
num_cpus = "1"

[dev-dependencies]
euc = "0.4"
vek = "0.9.9"
tobj = "0.1"
terminal_size = "0.1"
glium = { git="https://github.com/glium/glium#d247ec25999c98cef5c2b3497ee78800cf586d96" }
cgmath = "0.17"
gif = "0.10"

[profile.dev]
# Optimize by default so we don't need to remember to always pass in --release
opt-level = 3
